# rtRemote

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  NOTICE  README.md  rtremote.conf.ac  rtresolvd.service
ci/: validate.sh
include/: rtRemote.h  rtRemoteClient.h  rtRemoteEnvironment.h  rtRemoteIResolver.h  rtRemoteMessage.h  rtRemoteMulticastResolver.h  rtRemoteObject.h  rtRemoteObjectCache.h  rtRemoteSocketUtils.h  rtRemoteUnicastResolver.h
src/: CMakeLists.txt  rtRemote.cpp  rtRemoteClient.cpp  rtRemoteConfig.cpp  rtRemoteEnvironment.cpp  rtRemoteFactory.cpp  rtRemoteMulticastResolver.cpp  rtRemoteObject.cpp  rtRemoteObjectCache.cpp  rtRemoteServer.cpp  rtRemoteSocketUtils.cpp  rtRemoteUnicastResolver.cpp  rtRemoteValueReader.cpp  rtRemoteValueWriter.cpp  rtResolver.cpp  rtSampleClient.cpp  rtresolvd.cpp
src/js/: package-lock.json  package.json
src/js/examples/: methodTest.js  multiObjTest.js  typeTest.js
src/js/examples/server/: SampleObject.js  sampleServer.js
src/js/lib/: RTConst.js  RTEnvironment.js  RTException.js  RTMessageHelper.js  RTRemoteClientConnection.js  RTRemoteConnectionManager.js  RTRemoteMessageType.js  RTRemoteMulticastResolver.js  RTRemoteObject.js  RTRemoteProtocol.js  RTRemoteSerializer.js  RTRemoteServer.js  RTRemoteTCPTransport.js  RTRemoteTask.js  RTStatusCode.js  RTValueHelper.js  RTValueType.js  config.js
src/js/lib/common/: helper.js  logger.js
src/js/test/common/: SampleObject.js
tests/: perf_driver.cpp
